# AgentForge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  agentforge-build-prompt-slim.md  agentforge-build-prompt.md  docker-compose.yml  render.yaml  ruff.toml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  mypy.ini  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: blueprint.py
backend/app/routers/: agents.py  api_keys.py  blueprints.py  computer_use.py  dashboard.py  marketplace.py  messages.py  organizations.py  providers.py  runs.py  targets.py
backend/app/services/: agent_executor.py  blueprint_engine.py  blueprint_templates.py  heartbeat.py  messaging.py  orchestrator.py  token_tracker.py
backend/tests/: test_agent_executor.py  test_api.py  test_blueprints.py  test_costs.py  test_dashboard.py  test_e2e.py  test_e2e_v18_v19.py  test_heartbeat.py  test_integration.py  test_marketplace.py  test_messages.py  test_orchestration.py  test_runs.py  test_token_tracker.py  test_tools.py
cli/: pyproject.toml
cli/agentforge/: __init__.py  client.py  config.py  main.py
cli/tests/: test_cli.py
docs/: surface-audit.md  test-report.md
frontend/: .dockerignore  Dockerfile  README.md  biome.json  middleware.ts  package.json
frontend/lib/: api.ts  demo-data.ts
frontend/tests/: dashboard.test.tsx
supabase/: config.toml
supabase/migrations/: 001_users.sql  002_agents.sql  003_runs.sql  004_api_keys.sql  006_token_usage.sql  20260312_blueprints.sql  20260312_marketplace_teams.sql
(+41 files in other folders)
